styles.css
@font-face {
    font-family: 'M Plus Rounded 1c';
    src: url('assets/fonts/MPLUSRounded1c-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

:root {
    font-family: Arial, sans-serif;
    font-size: 18px;
    --bg-secondary: #b7d9f7;
}

html body {
    margin: 0;
    padding: 0;
    min-height: 100%;
}

body::-webkit-scrollbar {
    width: 0.25rem;
}

body::-webkit-scrollbar-track {
    background: #1e1e24;
}

body::-webkit-scrollbar-thumb {
    background: #6649b8;
}

.navbar {
    width: 16rem;
    position: fixed;
    overflow: auto;
    height: 100%;
}

.navbar-nav {
    list-style: none;
    padding: 0;
    margin: 0 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
}

.nav-item {
    margin: 0.5rem;
    width: 100%;
    background: var(--bg-secondary);
    border-radius: 25px;
}

.nav-item .icon {
    font-size: 2rem;
}

.nav-link {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: black;
    padding: 1rem 0 1rem 2rem;
}

.link-text {
    display: block;
    margin-left: 1rem;
    margin-right: 1rem;
}

.header {
    padding: 1rem;
    display: flex;
    background: var(--bg-secondary);
    border-radius: 25px;
    justify-content: center;
}

.header-text * {
    padding: 0;
    margin: 0;
}

.page-body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.title {
    font-family: "M Plus Rounded 1c", serif;
    font-size: 32px;
}

.section-header {
    font-family: "M Plus Rounded 1c", serif;
}

.profile-picture {
    border-radius: 50%;
    width: 90px;
    height: 90px;
    margin-left: 4rem;
}

section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem;
    max-width: 40rem;
    height: 100%;
}

.about-paragraph {
    padding-bottom: 4%;
}

.button {
    background: #0179ad;
    border-radius: 8px;
    color: white;
    padding: 12px 25px;
    text-align: center;
    text-decoration: none;
}

.button:hover {
    background: #00618b;
}

.button-group {
    display: flex;
    justify-content: center;
}

.repo-cards {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-wrap: wrap;
}

.repo-card {
    border-color: #d0d7de;
    border-style: solid;
    border-width: 1px;
    border-radius: 6px;
    padding: 1rem;
    margin: 0.5rem;
    font-size: 15px;
    max-width: 16rem;
    display: flex;
    flex-direction: column;
}

.repo-header {
    font-size: 18px;
}

.repo-link {
    text-decoration: none;
    color: #0969da;
}

.repo-link:hover {
    text-decoration: underline;
}

.repo-main-language {
    margin-top: auto;
}

.python-language-dot {
    background: #3572a5;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    border: 1px;
    top: 1px;
    display: inline-block
}

.typescript-language-dot {
    background: #2b7489;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    border: 1px;
    top: 1px;
    display: inline-block
}

.vimscript-language-dot {
    background: #1a9f4b;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    border: 1px;
    top: 1px;
    display: inline-block
}

.java-language-dot {
    background: #b07218;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    border: 1px;
    top: 1px;
    display: inline-block
}

@media only screen and (max-width: 1019px) {
    .navbar {
        bottom: 0;
        width: 100vw;
        height: 4rem;
        background: var(--bg-secondary);
    }

    .navbar-nav {
        justify-content: center;
        flex-direction: row;
        height: 100%;
        width: available;
    }

    .page-body {
        padding-bottom: 4rem;
    }

    .link-text {
        display: none;
    }

    .nav-item {
        max-width: 8rem;
        margin: 0;
    }

    .nav-link {
        display: flex;
        align-items: center;
        justify-content: center;
        padding: 1rem 0;
    }

    .nav-item:last-child {
        display: none;
    }

    .header {
        align-items: center;
        flex-direction: column;
    }

    .profile-picture {
        margin-left: 0;
        margin-top: 1rem;
    }
}

@media only screen and (min-width: 1020px) and (max-width: 1319px) {
    .navbar {
        width: 8rem;
    }

    .navbar-nav {
        justify-content: center;
    }

    .link-text {
        display: none;
    }

    .nav-link {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 2rem 0;
    }

    .nav-item:last-child {
        display: none;
    }
}

@media only screen and (min-width: 1320px) {
    .nav-item:first-child {
        margin-top: 1rem;
    }

    .nav-item:last-child {
        margin-top: auto;
        margin-bottom: 1rem;
        padding: 1rem 0;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .nav-link:before {
        content: '»';
        font-size: 2rem;
        transition: 0.5s;
        width: 1rem;
        opacity: 0;
    }

    .nav-link:hover:before {
        padding-right: 1rem;
        opacity: 1;
    }
}

